# hearthstone-linux-launcher

./: .gitignore  Cargo.toml  README.cn.md  README.md  flake.nix
.github/workflows/: release.yml
assets/: client.config.in
crates/stubs/blz-commerce-sdk-plugin/: Cargo.toml
crates/stubs/blz-commerce-sdk-plugin/src/: lib.rs
crates/stubs/commerce-http-client/: Cargo.toml
crates/stubs/commerce-http-client/src/: lib.rs
crates/stubs/core-foundation/: Cargo.toml
crates/stubs/osx-window-management/: Cargo.toml
data/: io.github.hearthstone_linux_gui.desktop  io.github.hearthstone_linux_gui.metainfo.xml
nix/: appimage.nix
packaging/: README.md
packaging/appimage/: AppRun  build.sh
packaging/native/: Dockerfile
src/: config.rs  download.rs  lib.rs  logging.rs  main.rs  paths.rs
src/auth/: mod.rs
src/install/: compatibility.rs  launcher.rs  manager.rs  unity.rs
src/ngdp/: cdn.rs  mod.rs
src/ui/: app.rs  auth.rs  browser.rs  components.rs  mod.rs  status.rs
